feat: modify everyFile logic